mostrar y ocultar menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My primera pagina web</title>
-    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://kit.fontawesome.com/43f3cc2ec8.js"></script>
 </head>
@@ -16,7 +15,7 @@
         <!--HEADER-->
         <header>
             <a class="logo" href="#"><i class="fas fa-dog"></i> Mis Perros</a>
-            <nav>
+            <nav id="nav">
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Mascotas</a></li>
@@ -24,7 +23,7 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
-            <i class="js_menu menu fas fa-bars"></i>
+            <i class="js_menu menu fas fa-bars" id="faBar"></i>
         </header>
         <!--MAIN-->
         <main>
@@ -114,7 +113,7 @@
         </footer>
     </div>
 
-    <script src="./scripts/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
